added delete and retrieve raw rest controllers
